# ARGUS

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
CONTEXT/: INDEX.md  MAP.md
CONTEXT/CACHE/: sprint-0_summary.md  sprint-1_summary.md
CONTEXT/MEMORY/: sprint-0.md  sprint-1.md
assets/samples/: demo_criticality.pkl  demo_graph.pkl  demo_route.pkl  demo_simulation.pkl
configs/: analytics.yaml  dashboard.yaml  data.yaml  graph.yaml  routing.yaml  simulation.yaml  vision.yaml
configs/scenarios/: bridge_collapse.yaml  flood_zone_a.yaml  road_blockage.yaml
docs/: AI_BOOTSTRAP.md  ARCHITECTURE.md  DESIGN.md  ENGINEERING.md  KNOWLEDGE.md  PROJECT.md  data_flow.md  demo_script.md  implementation_order.md  integration_points.md  module_map.md  repository_map.md  system_design.md  technology_mapping.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: LaserFlow.tsx  Layout.tsx  Navbar.tsx  TargetCursor.tsx
frontend/src/components/steps/: DashboardStep.tsx  ExtractionStep.tsx  HomeStep.tsx  LoginStep.tsx  WorkspaceStep.tsx
frontend/src/store/: useAppStore.ts
research/: datasets.md  models.md  papers.md  references.md  repositories.md
scripts/: dev.py  download_models.py  start-dev.sh  start_colab.sh  start_local.sh
src/argus/: __init__.py
src/argus/analytics/: __init__.py  analyzer.py  report.py
src/argus/api/: __init__.py  main.py
src/argus/cli/: __init__.py  main.py
src/argus/core/: __init__.py  config.py  errors.py  logging.py  protocols.py  types.py
src/argus/dashboard/: __init__.py  app.py
src/argus/data/: __init__.py  cache.py  imagery.py  preprocessing.py  vector.py
src/argus/graph/: __init__.py  builder.py  cleaning.py  export.py  loader.py  skeleton.py  trace.py
src/argus/routing/: __init__.py  accessibility.py  router.py
src/argus/simulation/: __init__.py  scenario.py  simulator.py
src/argus/vision/: __init__.py  extractor.py  postprocess.py  tiling.py
tests/argus/analytics/: test_analytics.py  test_stage4_improvements.py
tests/argus/core/: test_core.py
tests/argus/dashboard/: test_dashboard.py
tests/argus/data/: test_data.py  test_stage1_improvements.py
tests/argus/graph/: test_graph.py  test_stage3_improvements.py
tests/argus/integration/: test_extract_cli.py  test_m4_pipeline.py  test_m5_simulation.py  test_m6_routing.py
tests/argus/routing/: test_routing.py  test_stage6_improvements.py
tests/argus/simulation/: test_simulation.py  test_stage5_improvements.py
tests/argus/vision/: test_stage2_improvements.py  test_vision.py
tools/dev-dashboard/: extract_real_graph.py  index.html  mock-api-server.js  package-lock.json  package.json  real-api-server.js  real_graph_data.json  tailwind.config.js  vite.config.ts
tools/dev-dashboard/src/: App.css  App.tsx  index.css  main.tsx
tools/dev-dashboard/src/components/: AnalyticsPanel.tsx  Graph3D.tsx  GraphControls.tsx  Header.tsx  Legend.tsx  MainPanel.tsx  Sidebar.tsx  Toolbar.tsx  index.ts
tools/dev-dashboard/src/providers/: CodebaseMemoryProvider.tsx
tools/dev-dashboard/src/store/: index.ts
tools/dev-dashboard/src/types/: graph.ts  index.ts
validation/compatibility/: 04_compat.py  report.json
validation/dashboard/: 03_dashboard.py  dashboard_app.py  report.json
validation/graph/: 02_graph.py  report.json
validation/reports/: sprint-1_report.json
validation/vision/: 01_vision.py  report.json
