[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "argus"
version = "0.1.0"
description = "ARGUS — Satellite Road Graph Extraction for Urban Mobility Resilience"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "ARGUS Team", email = "argus@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    # Core
    "numpy>=1.24,<2.0",
    "scipy>=1.10",
    "pandas>=2.0",
    # GIS
    "rasterio>=1.3",
    "geopandas>=0.13",
    "shapely>=2.0",
    "pyproj>=3.6",
    # Graph
    "networkx>=3.1",
    "scikit-image>=0.21",
    "scikit-learn>=1.3",
    # ML / Vision
    "torch==2.2.0",
    "torchvision==0.17.0",
    "opencv-python>=4.8",
    # Config
    "omegaconf>=2.3",
    "pyyaml>=6.0",
    # Logging
    "loguru>=0.7",
    # Dashboard
    "streamlit>=1.28",
    "pydeck>=0.8",
    "folium>=0.15",
    # CLI
    "typer>=0.9",
    "streamlit-folium>=0.27.2",
    "fastapi>=0.139.0",
    "uvicorn>=0.51.0",
    "segmentation-models-pytorch>=0.5.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1",
    "pyright>=1.1",
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pre-commit>=3.5",
    "ipykernel>=6.0",
    "matplotlib>=3.7",
]

[project.scripts]
argus = "argus.cli.main:app"

[tool.setuptools.packages.find]
where = ["src"]
include = ["argus*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "T20", # print statements
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # function calls in default arguments
    "C408",  # dict/list comprehensions
]
per-file-ignores = { "tests/**/*" = ["T201", "S101"], "scripts/**/*" = ["T201"] }

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingModuleSource = false
reportUnusedImport = true
reportUnusedVariable = true
reportGeneralTypeIssues = true
reportOptionalMemberAccess = true
reportOptionalSubscript = true
reportOptionalIterable = true
reportOptionalCall = true
reportOptionalContextManager = true
reportOptionalOperand = true
reportInvalidTypeForm = true
reportArgumentType = true
reportReturnType = true
reportAssignmentType = true
reportCallIssue = true
reportIndexIssue = true
reportAttributeAccessIssue = true
strictListInference = true
strictDictionaryInference = true
strictSetInference = true
include = ["src"]
exclude = ["tests", "validation", "scripts", "assets", "docs", "research", "CONTEXT"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["src/argus"]
omit = ["tests/*", "validation/*", "scripts/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.pre-commit-hooks]
ruff = "ruff check --fix"
ruff-format = "ruff format"
pyright = "pyright"

[tool.setuptools.dynamic]
version = {attr = "argus.__version__"}
